--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastmcp>=2.11.2",
     "markdownify>=1.1.0",
+    "matplotlib>=3.10.5",
+    "openpyxl>=3.1.5",
+    "pandas>=2.3.1",
     "pillow>=11.3.0",
     "python-dotenv>=1.1.1",
     "readabilipy>=0.3.0",
