--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "dotenv>=0.9.9",
     "fastmcp>=2.11.2",
+    "httpx>=0.28.1",
     "markdownify>=1.1.0",
     "matplotlib>=3.10.5",
+    "mcp>=1.12.4",
     "openpyxl>=3.1.5",
     "pandas>=2.3.1",
     "pillow>=11.3.0",
     "python-dotenv>=1.1.1",
     "readabilipy>=0.3.0",
+    "seaborn>=0.13.2",
 ]
